versioned_docs/version-2.0/reference/targets/files.mdx
---
title: files
description: Loose files that live outside code packages.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Loose files that live outside code packages.

Files are placed directly in archives, outside of code artifacts such as Python wheels or JVM
JARs. The sources of a `files` target are accessed via filesystem APIs, such as Python&#x27;s
`open()`, via paths relative to the repo root.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings that you can use to describe a target. For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tags='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target. Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;]. Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;]. You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `sources`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

A list of files and globs that belong to this target. Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`. Example: `sources=['example.py', 'test_*.py', '!test_ignore.py']`.

</Field>

</span>
